[package]
name = "metaboss_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.56"
base64 = "0.13.0"
borsh = "0.9.1"
bs58 = "0.4.0"
console = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
glob = "0.3.0"
indexmap = { version = "1.8.1", features = ["serde"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
lazy_static = "1.4.0"
log = "0.4.14"
metaboss_lib = "0.0.6"
mpl-token-metadata = { version = "1.4", features = ["serde-feature"] }
num_cpus = "1.13.0"
phf = { version = "0.10", features = ["macros"] }
rayon = "1.5.1"
reqwest = { version = "0.11.5", features = ["json"] }
retry = "1.3.0"
serde = "1.0.130"
serde_json = "1.0.68"
serde_yaml = "0.8.21"
shellexpand = "2.1.0"
solana-client = "1.10.17"
solana-account-decoder = "1.10.17"
solana-logger = "1.11.1"
solana-program = "1.10.17"
solana-sdk = "1.10.17"
spl-associated-token-account = "~1.0.3"
spl-token = "3.2.0"
structopt = "0.3.23"
thiserror = "1.0.30"
tokio = "1.14.1"

[features]

[dev-dependencies]
assert_cmd = "2.0.2"
