[package]
name = "metaboss_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
base64 = "0.13.0"
borsh = "0.9.3"
bs58 = "0.4.0"
futures = "0.3.24"
indexmap = { version = "1.9.1", features = ["serde"] }
log = "0.4.17"
mpl-token-metadata = { version = "1.8", features = ["serde-feature"] }
phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.145"
serde_json = "1.0.85"
serde_yaml = "0.9.13"
solana-client = "1.14.3"
solana-account-decoder = "1.14.3"
solana-program = "1.14.3"
solana-sdk = "1.14.3"
spl-associated-token-account = "1.1.1"
spl-token = "3.5.0"
thiserror = "1.0.37"
tokio = "1.21.2"

[features]

[dev-dependencies]
assert_cmd = "2.0.4"
